Fixed text selection styling not working on firefox

--- a/src/css/BookReader.scss
+++ b/src/css/BookReader.scss
@@ -73,12 +73,17 @@ $mobileMenuBG: #151515;
 }
 
 // Highlight colors for text selection layer
-tspan::selection{
+tspan::selection {
     background: rgba($color: #08318a98, $alpha: 0.8);
     fill: white;
     fill-opacity: 1;
 }
 
+tspan::-moz-selection {
+    background: rgba($color: #08318a98, $alpha: 0.8);
+    color: white;
+    fill-opacity: 1;
+}
 
 // These are the main root elements in BookReader
 $brScope: ".BookReader, .BRmobileMenu, .BRfloat";
